tests/ui/iterators/bound.stderr
error[E0277]: `u8` is not an iterator
  --> $DIR/bound.rs:2:10
   |
LL | struct T(S<u8>);
   |          ^^^^^ `u8` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `u8`
note: required by a bound in `S`
  --> $DIR/bound.rs:1:13
   |
LL | struct S<I: Iterator>(I);
   |             ^^^^^^^^ required by this bound in `S`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
